Renamed README to README.rst.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 optimize = 1
 
 [bdist_rpm]
-doc_files = AUTHORS LICENSE NOTICE README docs
+doc_files = AUTHORS LICENSE NOTICE README.rst docs
 group = Development/Libraries
 
 [build_sphinx]
